--- a/custom.css
+++ b/custom.css
@@ -455,7 +455,8 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 	-webkit-transition: all .5s;
 }*/
 .app, .app::after {
-	background-image: url("https://imgur.com/RG03PyX.png");
+	background-image: url("https://unsplash.it/1680/1050/?random");
+	/*background-image: url("https://imgur.com/RG03PyX.png");*/
 	/*-webkit-animation: opacityBg 20s ease-in-out infinite;*/
 	background-size: cover !important;
 	/* animations are very CPU intensive. possible fix? */
