--- a/custom.css
+++ b/custom.css
@@ -583,11 +583,19 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 	background-color: rgba(46, 49, 54, .2);
 	border-color: rgba(54, 57, 62, .2);
 }
+/* dividers: new msgs + time/date differences */
+.chat .divider>div {
+	height: 2px;
+	-webkit-box-shadow: 0px 1px 2px rgba(46, 49, 54, .8);
+}
+/* red */
+/* #f04747 */
 
 /* member-bar */
 /* v1: rgba(46, 49, 54, 1.0) */
 .theme-dark .channel-members {
-	background: rgba(46, 49, 54, .4);
+	/*-webkit-filter: blur(.05em); // gets annoying */
+	background: rgba(46, 49, 54, 0.4);
 /*	background: -webkit-linear-gradient(left, rgba(46, 49, 54, 0.7), rgba(46, 49, 54, 0.95), rgba(46, 49, 54, 0.98), rgba(46, 49, 54, 1.0));
 	opacity: 0.5;*/
 	-webkit-box-shadow: -2px 0px 1px rgba(46, 49, 54, 0.4);
