fix friends / DMs transparency

--- a/custom.css
+++ b/custom.css
@@ -93,18 +93,29 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 	font-size: 24px;
 }*/
 
-.guild-channels {
+.guild-channels, .private-channels {
 	background: -webkit-linear-gradient(right, rgba(46, 49, 54, 0.9), rgba(46, 49, 54, 0.96), rgba(46, 49, 54, 0.97),rgba(46, 49, 54, 0.98), rgba(46, 49, 54, 1.0));
 	-webkit-transition: all .5s; /*doesn't effect gradient*/
 }
-.guild-channels:hover {
+.guild-channels:hover, .private-channels:hover {
 	background: -webkit-linear-gradient(right, rgba(46, 49, 54, 0.7), rgba(46, 49, 54, 0.93),rgba(46, 49, 54, 0.97), rgba(46, 49, 54, 1.0));
 	-webkit-transition: all .5s;
 }
-
+.private-channels .scroller {
+	overflow-x: hidden;
+}
+.search-bar-inner {
+	margin-left: -13px;
+	-webkit-transition: all .5s;
+}
+.private-channels:hover .search-bar-inner {
+	margin-left: 0px;
+	-webkit-transition: all .5s;
+}
 /*.guild-channels:hover {
 	background: -webkit-linear-gradient(right, rgba(46, 49, 54, 0.7), rgba(46, 49, 54, 0.95), rgba(46, 49, 54, 1.0));
 }*/
+
 
 .channels-wrap {
 	width: 150px;
@@ -310,7 +321,7 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 .channel-members-wrap .avatar-small, .channel-members-wrap:hover .avatar-small,
 .channel-members-wrap .avatar-small .status, .channel-members-wrap:hover .avatar-small .status,
 .channel-members-wrap .channel-members .member .member-username-inner,
-.channel-members-wrap:hover .channel-members .member .member-username-inner  {
+.channel-members-wrap:hover .channel-members .member .member-username-inner {
 	-webkit-transition: all .5s;
 }
 
@@ -426,6 +437,14 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 	border-top-color: #B42926;
 }
 
+/* loading-spinner? */
+/*.spinner-chasing-dots .spinner-item {
+	background-color: #B42926;
+}
+.spinner-wandering-cubes .spinner-item {
+	background-color: #B42926;
+}*/
+
 /* typing status */
 /* #36393e */
 .theme-dark .chat form .typing {
@@ -457,7 +476,6 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 	background-size: cover !important;
 	-webkit-transition: all .5s;
 	background-color: rgba(54, 57, 62, .7);
-
 }
 /*background if unsplash doesn't load*/
 .app, .app::after{
@@ -524,24 +542,34 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 	background-position: 100px 0px;*/
 }
 /* #2e3136 */
-.guild-channels {
+.guild-channels, .private-channels {
 	/*background: rgba(46, 49, 54, .8);*/
 	background: rgba(46, 49, 54, .35);
 }
-.guild-channels:hover {
+.guild-channels:hover, .private-channels:hover {
 	background: rgba(46, 49, 54, .7);
 }
 /* #2e3136 */
-.guild-header header {
+.guild-header header, .search-bar{
 	/*background: rgba(46, 49, 54, .9);*/
 	background: rgba(46, 49, 54, .6);
 }
-.guild-channels-wrapper:hover .guild-header header {
+.search-bar {
+	background: rgba(46, 49, 54, .5);
+}
+.guild-channels-wrapper:hover .guild-header header,
+.private-channels:hover .search-bar {
 	background: rgba(46, 49, 54, .7);
 }
 /* -- #282b30 */
-.guild-channels-wrapper:hover .guild-header header:hover, .guild-header.popout-open header {
+.guild-channels-wrapper:hover .guild-header header:hover,
+.guild-header.popout-open header,
+.private-channels:hover .search-bar:hover {
 	background: rgba(40, 43, 48, .9);
+}
+.private-channels:hover .search-bar,
+.private-channels:hover .search-bar:hover {
+	transition: background-color .15s ease;
 }
 /* -webkit-linear-gradient(left,#282b30 85%,#2e3136) */
 /* linear-gradient(to right,#282b30 85%,#2e3136) */
@@ -580,7 +608,7 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 }
 /* chat */
 /* #36393e */
-.theme-dark .chat {
+.theme-dark .chat, #friends .friends-table {
 	background-color: rgba(54, 57, 62, .0);
 }
 /* #36393e */
@@ -730,3 +758,31 @@ TROUBLESHOOTING: IF YOU NEED ANY HELP GO TO HTTPS://BETTERDOCS.NET
 	display: none;
 }
 
+
+
+
+.theme-dark .chat > .content, .theme-dark .friends-table, .theme-dark .messages-wrapper {
+	background-color: rgba(54, 57, 62, .0);
+}
+
+.theme-dark #friends {
+	background-color: rgba(54, 57, 62, .0);
+}
+
+.theme-dark #friends .friends-header {
+	background-color: rgba(54, 57, 62, .7);
+}
+
+
+
+.theme-dark #friends .friends-header .tab-bar .tab-bar-item.selected {
+	background-color: hsla(0,0%,100%,.8);
+}
+
+
+
+
+
+.theme-dark #friends .friends-table .friends-row:hover {
+	background: rgba(54, 57, 62, .7);
+}
