--- a/custom.css
+++ b/custom.css
@@ -620,6 +620,40 @@ RECOMMENDATIONS: EVERY URL AT THE BOTTOM SHOULD BE THE SAME TO MAKE THE THEME MA
 	border-radius: 0;
 }
 
+/* user mute/deafen/settings buttons */
+[class*=channels-] [class*=flex-] + [class*=container-]>[class*=flex-] {
+	position: relative;
+	right: 20px;
+	margin-right:0px;
+	
+}
+[class*=channels-]:hover [class*=flex-] + [class*=container-]>[class*=flex-] {
+	margin-right:-20px;
+}
+[class*=channels-] [class*=flex-] + [class*=container-]>[class*=flex-]>div {
+	margin-right:-30px;
+	opacity: 0;
+	
+}
+[class*=channels-]:hover [class*=flex-] + [class*=container-]>[class*=flex-]>div {
+	margin-right:0px;
+	opacity: 1;
+}
+/* last thing has a different format */
+[class*=channels-]:hover [class*=flex-] + [class*=container-]>[class*=flex-]>div:last-child {
+	opacity: .6;
+	/* background-color no work */
+	-webkit-transition: all .5s, background-color 0s;
+}
+[class*=channels-] [class*=flex-] + [class*=container-]>[class*=flex-]>div:last-child:hover {
+	opacity: 1;
+	-webkit-transition: all 0s;
+}
+[class*=channels-] [class*=flex-] + [class*=container-]>[class*=flex-]>div:first-child {
+	opacity: 1;
+}
+
+
 /* #2e3136 */
 [class*=channels-], .private-channels {
 	/*background: rgba(46, 49, 54, .8);*/
